[package]
name = "repro-hyper-client-hang"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
bytes      = { version=">=1.0.0, <1.1" }
futures    = { version=">=0.3.1, <0.4" }
http       = { version=">=0.2.2, <0.3" }
http-body  = { version=">=0.4.0, <0.5" }
hyper      = { version=">=0.14.2, <0.15", default-features=false, features=["http1", "client", "server", "stream", "tcp"] }
tokio      = { version=">=1.0.1, <1.1", features=["rt-multi-thread"] }

[features]
no-delay = []
