[package]
name = "repro-hyper-client-hang"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
bytes      = { version=">=0.5.2, <0.6" }
futures    = { version=">=0.3.1, <0.4" }
http       = { version=">=0.2.2, <0.2.3" }
http-body  = { version=">=0.3.0, <0.4" }
hyper      = { version=">=0.13.1, <0.14", default-features=false, features=["stream", "tcp"] }
tokio      = { version=">=0.2.6, <0.3", features=["blocking", "rt-threaded", "stream"] }

[features]
no-delay = []
